fix dark style a being too dark

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -154,7 +154,7 @@ a {
     }
 
     a {
-        color: var(--primary-300);
+        color: var(--primary-600);
     }
 
     a:hover {
